# mini-deft

./: Cargo.toml  README.md  design-doc.md
examples/: and.dft  arrs.dft  boxes.dft  demo.dft  drops.dft  foo.dft  funs.dft  generics.dft  gpio.dft  helpers.c  ifaces.dft  ifs.dft  lvalue.dft  methods.dft  nested-controlflow.dft  sdl-wrapper.c  simple.dft  sret.dft  std.c  string.dft  struct-params.dft  struct-returns.dft  template.dft
examples/modules/: main.dft  math.dft  point.dft
examples/testing-sdl/: combined.dft  main.dft  sdl.dft
examples/testing-std/: main.dft  std.dft
src/: analyzer.rs  ast.rs  codegen.rs  common.rs  lexer.rs  main.rs  parser.rs  token.rs
