[package]
name = "deft"
version = "0.0.0"
edition = "2018"
description = "A (WIP) systems programming language that's memory safe, accessible, and efficient."
authors = ["Kartik Nair <kartikajitnair@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.16"
ariadne = "0.1.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
either = "*"
seahorse = "1.1"
